// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`definitions does not handle destructuring of constants 1`] = `
"> 1 | const [a, b] = [1, 2];
    |      ^^^^^^

Expected simple identifier"
`;

exports[`definitions does not handle empty declarations 1`] = `
"> 1 | let x;
    |    ^

Expected definition"
`;

exports[`definitions handles definitions of constants 1`] = `
"Definition n :=
  12."
`;

exports[`definitions handles definitions of functions 1`] = `
"Definition id {A : Type} (x : A) : A :=
  x."
`;

exports[`exports handles exports 1`] = `
"Definition x :=
  12."
`;

exports[`imports does not handle non-React imports 1`] = `
"> 1 | import express from \\"express\\";
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Only handle imports from React for now"
`;

exports[`imports handles React import 1`] = `""`;
